implemented the new user sub types

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@ Software.
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
